--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -2,7 +2,7 @@ stages:
 - name: build
   steps:
   - publishImageConfig:
-      dockerfilePath: dracosourcecode/nifi-rel-nifi-1.7.0/nifi-docker/dockerhub/Dockerfile
+      dockerfilePath: nifi-rel-nifi-1.7.0/nifi-docker/dockerhub/Dockerfile
       buildContext: .
       tag: draco-from-source-code
       registry: 192.168.100.176:5000
