--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -5,6 +5,7 @@ stages:
       dockerfilePath: nifi-rel-nifi-1.7.0/nifi-docker/dockerhub/Dockerfile
       buildContext: .
       tag: draco-from-source-code
+      pushRemote: true
       registry: 192.168.100.176:5000
     env:
       PLUGIN_DEBUG: "true"
